# bpod

./: .gitignore  README.md  bpod.py
docs/: bpod-bom-estimate.xlsx  bpod_bom_final.xls
docs/booklet/: bpod_page.docx
firmware/: CMakeLists.txt
firmware/adafruit/: CMakeLists.txt
firmware/animations/: CMakeLists.txt
firmware/animations/Animations/: BSidesLogoAnimation.hpp  BpodLoadAnimation.hpp
firmware/apps/: CMakeLists.txt
firmware/apps/about/: CMakeLists.txt
firmware/apps/about/App/: About.cpp  About.hpp
firmware/apps/app/: CMakeLists.txt
firmware/apps/app/App/: App.cpp  App.hpp
firmware/apps/brightness/: CMakeLists.txt
firmware/apps/brightness/App/: Brightness.cpp  Brightness.hpp
firmware/apps/diagram_view/: CMakeLists.txt
firmware/apps/diagram_view/App/: DiagramView.cpp  DiagramView.hpp
firmware/apps/game_menu/: CMakeLists.txt
firmware/apps/game_menu/App/: GameMenu.cpp  GameMenu.hpp
firmware/apps/gpio/: CMakeLists.txt
firmware/apps/gpio/App/: GPIO.cpp  GPIO.hpp
firmware/apps/i2cdetect/: CMakeLists.txt
firmware/apps/i2cdetect/App/: I2CDetect.cpp  I2CDetect.hpp
firmware/apps/i2csniff/: CMakeLists.txt  notes.txt
firmware/apps/i2csniff/App/: I2CSniff.cpp  I2CSniff.hpp
firmware/apps/leds/: CMakeLists.txt
firmware/apps/leds/App/: Leds.cpp  Leds.hpp
firmware/apps/main_menu/: CMakeLists.txt
firmware/apps/main_menu/App/: MainMenu.cpp  MainMenu.hpp
firmware/apps/mcp23017/: CMakeLists.txt  notes.txt
firmware/apps/mcp23017/App/: MCP23017.cpp  MCP23017.hpp
firmware/apps/mcp23S17/: CMakeLists.txt  datasheet.txt  notes.txt
firmware/apps/mcp23S17/App/: MCP23S17.cpp  MCP23S17.hpp
firmware/apps/menu/: CMakeLists.txt
firmware/apps/menu/App/: Menu.cpp  Menu.hpp
firmware/apps/music_menu/: CMakeLists.txt
firmware/apps/music_menu/App/: MusicMenu.cpp  MusicMenu.hpp
firmware/apps/qrcode_view/: CMakeLists.txt
firmware/apps/qrcode_view/App/: QrCodeView.cpp  QrCodeView.hpp
firmware/apps/schedule/: CMakeLists.txt
firmware/apps/schedule/App/: Schedule.cpp  Schedule.hpp
firmware/apps/serial_monitor/: CMakeLists.txt
firmware/apps/serial_monitor/App/: SerialMonitor.cpp  SerialMonitor.hpp
firmware/apps/settings_menu/: CMakeLists.txt
firmware/apps/settings_menu/App/: SettingsMenu.cpp  SettingsMenu.hpp
firmware/apps/shockcollar/: CMakeLists.txt
firmware/apps/shockcollar/App/: ShockCollar.cpp  ShockCollar.hpp  ShockCollarRF.cpp  ShockCollarRF.hpp
firmware/apps/snake/: CMakeLists.txt
firmware/apps/snake/App/: Snake.cpp  Snake.hpp
firmware/apps/spisniff/: CMakeLists.txt  notes.txt
firmware/apps/spisniff/App/: SPISniff.cpp  SPISniff.hpp
firmware/apps/tetris/: CMakeLists.txt
firmware/apps/tetris/App/: Tetris.cpp  Tetris.hpp
firmware/apps/text_view/: CMakeLists.txt
firmware/apps/text_view/App/: TextView.cpp  TextView.hpp
firmware/apps/tool_menu/: CMakeLists.txt
firmware/apps/tool_menu/App/: ToolMenu.cpp  ToolMenu.hpp
firmware/apps/uartsniff/: CMakeLists.txt
firmware/apps/uartsniff/App/: UARTSniff.cpp  UARTSniff.hpp
firmware/apps/uartterm/: CMakeLists.txt  notes.txt
firmware/apps/uartterm/App/: UARTTerm.cpp  UARTTerm.hpp
firmware/apps/wifiscan/: CMakeLists.txt
firmware/apps/wifiscan/App/: WifiScan.cpp  WifiScan.hpp
firmware/bpod/: CMakeLists.txt
firmware/bpod/Bpod/: Bpod.cpp  Bpod.hpp
firmware/ctf/chals/badge/badge-blinky-bill/: MANIFEST.yaml  README.md  WALKTHROUGH.md
firmware/ctf/chals/badge/badge-cheesy-strings-i/: MANIFEST.yaml  README.md  WALKTHROUGH.md
firmware/ctf/chals/badge/badge-cheesy-strings-ii/: MANIFEST.yaml  README.md  WALKTHROUGH.md
firmware/ctf/chals/badge/badge-i-can-see-you/: MANIFEST.yaml  README.md  WALKTHROUGH.md
firmware/ctf/chals/badge/badge-i-spy-with-my-little-eye/: MANIFEST.yaml  README.md  WALKTHROUGH.md
firmware/ctf/chals/badge/badge-serial-hacker/: MANIFEST.yaml  README.md  WALKTHROUGH.md
firmware/ctf/ctf/: CMakeLists.txt  ctf.c  ctf.h  ctf_flags.py
firmware/esp32/: CMakeLists.txt  sdkconfig
firmware/esp32/main/: CMakeLists.txt  bpod.c  bpod.cpp  main.cpp
firmware/esp32s2/: sdkconfig
firmware/esp32s2/main/: main.cpp
firmware/githash/: CMakeLists.txt  githash.c  githash.h  githash.py
firmware/image_storage/: bsides_logo.hpp  image_encoder.py
firmware/images/: BpodLogo.hpp  BpodMenuArrow.hpp  BpodMenuBar.hpp  BpodScrollEmpty.hpp  BpodScrollFill.hpp  BpodTitleBar.hpp  CMakeLists.txt  image_encoder.py
firmware/images/Images/: BpodMenuItem.cpp  BpodMenuItem.hpp  BpodProgressBar.hpp  BpodScrollBar.hpp  BpodTitleBar.cpp  BpodTitleBar.hpp
firmware/keys/: CMakeLists.txt  gen_key_header.py  keys.h
firmware/main/: CMakeLists.txt  bpod.c
firmware/menu/: CMakeLists.txt
firmware/menu/Menu/: BpodMenu.hpp
firmware/music/: CMakeLists.txt  music_encoder.py
firmware/qrcodegen/: CMakeLists.txt
firmware/qrcodegen/src/: qrcodegen.c
firmware/schedulec/: CMakeLists.txt  schedule_encoder.py
firmware/schedulec/src/: schedulec.c  schedulec.h
firmware/score/: CMakeLists.txt  score.c  score.h
firmware/snakec/: CMakeLists.txt  README.md  library.properties
firmware/snakec/src/: snakec.c  snakec.h
firmware/st7735/: CMakeLists.txt  st7735.c  st7735.h
firmware/stringdb/: CMakeLists.txt  stringdb.c  stringdb.h  stringdb.json  stringdb.py
firmware/tetrisc/: CMakeLists.txt  README.md  library.properties
firmware/tetrisc/src/: tetrisc.c  tetrisc.h
firmware/tinyaes/: CMakeLists.txt
firmware/tinyaes/src/: tinyaes.c
firmware/touch/: CMakeLists.txt
firmware/touch/TouchWheel/: TouchWheel.cpp  TouchWheel.h
firmware/viewerc/: CMakeLists.txt  README.md  library.properties
firmware/viewerc/src/: viewerc.c  viewerc.h
hardware/20230222_pcbway/: 20230222_pcbway_bpod_bom.xls  20230222_pcbway_bpod_position.pos
hardware/20230430_pcbway/: 20230430_pcbway_bpod_bom.xls  20230430_pcbway_bpod_position.pos
hardware/20230618_pcbway/: pcbway_flash_bpod.py  pcbway_flash_bpod_2mb.md5
keys/: gen_keys.py  master.hex  master2.hex
schedule/: README.md
server/: gen_score_url.py  run_server.py  score_submit_url.txt  update_url.txt
(+40 files in other folders)
