cmake_minimum_required(VERSION 3.16)
project(bpod)

add_subdirectory(stringdb)
add_subdirectory(ctf)
add_subdirectory(adafruit)
add_subdirectory(tinyaes)
add_subdirectory(touch)
add_subdirectory(keys)
add_subdirectory(score)
add_subdirectory(snakec)
add_subdirectory(tetrisc)
add_subdirectory(viewerc)
add_subdirectory(qrcodegen)
add_subdirectory(schedulec)
add_subdirectory(images)
add_subdirectory(animations)
add_subdirectory(menu)
add_subdirectory(apps)
add_subdirectory(bpod)
