add_subdirectory(app)
add_subdirectory(snake)
add_subdirectory(tetris)
add_subdirectory(menu)
add_subdirectory(text_view)
add_subdirectory(qrcode_view)
add_subdirectory(i2cdetect)
add_subdirectory(serial_monitor)
add_subdirectory(schedule)
add_subdirectory(game_menu)
add_subdirectory(tool_menu)
add_subdirectory(main_menu)
