add_subdirectory(app)
add_subdirectory(snake)
add_subdirectory(tetris)
add_subdirectory(menu)
add_subdirectory(text_view)
add_subdirectory(diagram_view)
add_subdirectory(qrcode_view)
add_subdirectory(i2cdetect)
add_subdirectory(i2csniff)
add_subdirectory(uartsniff)
add_subdirectory(mcp23017)
add_subdirectory(mcp23S17)
add_subdirectory(leds)
add_subdirectory(schedule)
add_subdirectory(game_menu)
add_subdirectory(tool_menu)
add_subdirectory(main_menu)
