add_subdirectory(app)
add_subdirectory(snake)
add_subdirectory(tetris)
add_subdirectory(menu)
add_subdirectory(text_view)
add_subdirectory(diagram_view)
add_subdirectory(qrcode_view)
add_subdirectory(i2cdetect)
add_subdirectory(i2csniff)
add_subdirectory(spisniff)
add_subdirectory(uartterm)
add_subdirectory(mcp23017)
add_subdirectory(mcp23S17)
add_subdirectory(wifiscan)
add_subdirectory(gpio)
add_subdirectory(shockcollar)
add_subdirectory(leds)
add_subdirectory(brightness)
add_subdirectory(about)
add_subdirectory(music_menu)
add_subdirectory(schedule)
add_subdirectory(game_menu)
add_subdirectory(tool_menu)
add_subdirectory(settings_menu)
add_subdirectory(main_menu)
